<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.SaptarshiSarkar12</groupId>
        <artifactId>Drifty</artifactId>
        <version>2.1.0</version>
    </parent>
    <artifactId>GUI</artifactId>
    <name>Drifty GUI</name>
    <description>GUI module of Drifty</description>

    <properties>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
        <gluonfx-maven-plugin.version>1.0.26</gluonfx-maven-plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <gui.main-class>main.Drifty_GUI</gui.main-class>
        <system-linker-arg/>
        <resource-config-file/>
        <system-native-image-arg/>
        <compatibility-arg/>
        <capcache-arg1/>
        <capcache-arg2/>
        <capcache-arg3/>
        <package.type/>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.github.SaptarshiSarkar12</groupId>
            <artifactId>Core</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>${gui.main-class}</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>${gluonfx-maven-plugin.version}</version>
                <configuration>
                    <enableSWRendering>true</enableSWRendering>
                    <mainClass>${gui.main-class}</mainClass>
                    <linkerArgs>
                        <arg>${system-linker-arg}</arg>
                    </linkerArgs>
                    <nativeImageArgs>
                        <arg>--enable-url-protocols=https</arg>
                        <arg>--enable-url-protocols=http</arg>
                        <arg>--no-fallback</arg>
                        <arg>--verbose</arg>
                        <arg>-H:ResourceConfigurationFiles=${pom.parent.basedir}/config/${resource-config-file}</arg>
                        <arg>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk=ALL-UNNAMED</arg>
                        <arg>${system-native-image-arg}</arg>
                        <arg>${compatibility-arg}</arg>
                        <arg>${capcache-arg1}</arg>
                        <arg>${capcache-arg2}</arg>
                        <arg>${capcache-arg3}</arg>
                    </nativeImageArgs>
                    <appIdentifier>Drifty GUI</appIdentifier>
                    <releaseConfiguration>
                        <vendor>Drifty</vendor>
                        <version>${project.shortVersionString}</version>
                        <description>Drifty is an Open-Source Interactive File Downloader system</description>
                        <packageType>${package.type}</packageType>
                        <!-- for macOS/iOS -->
                        <bundleName>Drifty GUI</bundleName>
                        <bundleShortVersion>${project.version}</bundleShortVersion>
                        <bundleVersion>${project.version}</bundleVersion>
                        <skipSigning>true</skipSigning>
                    </releaseConfiguration>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- [macOS ARM64] GUI native image builder profile -->
        <profile>
            <id>build-drifty-gui-for-macos-14</id>
            <properties>
                <package.type>pkg</package.type>
                <system-native-image-arg>-Dsvm.platform=org.graalvm.nativeimage.Platform$MACOS_AARCH64</system-native-image-arg>
                <system-linker-arg>${pom.parent.basedir}/config/missing_symbols-macos-14.o</system-linker-arg>
                <resource-config-file>resource-config-macos-aarch64.json</resource-config-file>
                <compatibility-arg>-march=compatibility</compatibility-arg>
                <capcache-arg1>-H:CAPCacheDir=/tmp/cap</capcache-arg1>
                <capcache-arg3>-H:+NewCAPCache</capcache-arg3>
                <mac.app.store>true</mac.app.store>
            </properties>
        </profile>
        <!-- [macOS x86_64] GUI native image builder profile -->
        <profile>
            <id>build-drifty-gui-for-macos-13</id>
            <properties>
                <package.type>pkg</package.type>
                <system-native-image-arg>-Dsvm.platform=org.graalvm.nativeimage.Platform$MACOS_AMD64</system-native-image-arg>
                <system-linker-arg>${pom.parent.basedir}/config/missing_symbols-macos-13.o</system-linker-arg>
                <resource-config-file>resource-config-macos-x64.json</resource-config-file>
                <compatibility-arg>-march=compatibility</compatibility-arg>
                <mac.app.store>true</mac.app.store>
            </properties>
        </profile>
        <!-- [Linux] GUI native image builder profile -->
        <profile>
            <id>build-drifty-gui-for-ubuntu-latest</id>
            <properties>
                <system-linker-arg>${pom.parent.basedir}/config/missing_symbols-ubuntu-latest.o</system-linker-arg>
                <resource-config-file>resource-config-linux.json</resource-config-file>
                <compatibility-arg>-march=compatibility</compatibility-arg>
            </properties>
        </profile>
        <!-- [Windows] GUI native image builder profile -->
        <profile>
            <id>build-drifty-gui-for-windows-latest</id>
            <properties>
                <!-- Error: Building a native image is not yet supported on Windows with this (v1.0.25) version.
                     Please use GluonFX plugin version 1.0.23 instead.-->
                <gluonfx-maven-plugin.version>1.0.23</gluonfx-maven-plugin.version>
                <package.type>msi</package.type>
                <system-linker-arg>${pom.parent.basedir}/config/missing_symbols-windows-latest.o</system-linker-arg>
                <resource-config-file>resource-config-windows.json</resource-config-file>
                <compatibility-arg>-march=compatibility</compatibility-arg>
            </properties>
        </profile>
    </profiles>
</project>
